--- a/product_meat_unece/i18n/fr.po
+++ b/product_meat_unece/i18n/fr.po
@@ -1,20 +1,20 @@
-# Translation of Odoo Server.
-# This file contains the translation of the following modules:
-# 	* product_meat_unece
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 13.0\n"
+"Project-Id-Version: ametras-xsolutions\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-05 08:17+0000\n"
-"PO-Revision-Date: 2020-03-05 08:17+0000\n"
 "Last-Translator: \n"
-"Language-Team: \n"
-"Language: \n"
+"Language-Team: French\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Crowdin-Project: ametras-xsolutions\n"
+"X-Crowdin-Project-ID: 530964\n"
+"X-Crowdin-Language: fr\n"
+"X-Crowdin-File: /[AmetrasIntelligence.community-data-files] 13.0/product_meat_unece/i18n/product_meat_unece.pot\n"
+"X-Crowdin-File-ID: 2914\n"
+"Language: fr_FR\n"
+"PO-Revision-Date: 2022-08-06 21:41\n"
 
 #. module: product_meat_unece
 #: model:ir.model.fields,field_description:product_meat_unece.field_product_product__unece_meat_bovine_category_id
@@ -68,7 +68,7 @@ msgstr "Traitement après-abattage"
 #. module: product_meat_unece
 #: model:ir.model,name:product_meat_unece.model_product_template
 msgid "Product Template"
-msgstr "Modèle d'article"
+msgstr ""
 
 #. module: product_meat_unece
 #: model:ir.model.fields,field_description:product_meat_unece.field_product_product__unece_meat_product_cut_id
@@ -103,22 +103,18 @@ msgstr "Mode d'abattage"
 #: model:ir.model.fields,field_description:product_meat_unece.field_product_template__unece_meat_species_id
 #: model:ir.model.fields.selection,name:product_meat_unece.selection__unece_code_list__type__meat_species
 msgid "Species"
-msgstr "Espèce"
+msgstr ""
 
 #. module: product_meat_unece
 #: code:addons/product_meat_unece/models/unece_code_list.py:0
 #, python-format
-msgid ""
-"The code \"{code}\" doesn't match the required code length for this type "
-"({required_length})."
-msgstr ""
-"Le code \"{code}\" ne respecte pas la taille requise pour ce type "
-"({required_length})."
+msgid "The code \"{code}\" doesn't match the required code length for this type ({required_length})."
+msgstr "Le code \"{code}\" ne respecte pas la taille requise pour ce type ({required_length})."
 
 #. module: product_meat_unece
 #: model:ir.model.fields,field_description:product_meat_unece.field_unece_code_list__type
 msgid "Type"
-msgstr "Type"
+msgstr ""
 
 #. module: product_meat_unece
 #: model_terms:ir.ui.view,arch_db:product_meat_unece.product_template_form_view
@@ -134,7 +130,7 @@ msgstr "Code Viande UNECE"
 #. module: product_meat_unece
 #: model:ir.model,name:product_meat_unece.model_unece_code_list
 msgid "UNECE nomenclatures"
-msgstr "Nomenclatures UNECE"
+msgstr ""
 
 #. module: product_meat_unece
 #: model:ir.model.fields,field_description:product_meat_unece.field_product_product__unece_meat_weight_range_id
@@ -142,3 +138,4 @@ msgstr "Nomenclatures UNECE"
 #: model:ir.model.fields.selection,name:product_meat_unece.selection__unece_code_list__type__meat_weight_range
 msgid "Weight range"
 msgstr "Fourchette de poids"
+
