--- a/base_bank_from_iban/i18n/de.po
+++ b/base_bank_from_iban/i18n/de.po
@@ -14,7 +14,7 @@ msgstr ""
 "X-Crowdin-File: /[AmetrasIntelligence.community-data-files] 13.0/base_bank_from_iban/i18n/base_bank_from_iban.pot\n"
 "X-Crowdin-File-ID: 2900\n"
 "Language: de_DE\n"
-"PO-Revision-Date: 2022-08-06 21:41\n"
+"PO-Revision-Date: 2022-08-07 00:02\n"
 
 #. module: base_bank_from_iban
 #: model:ir.model,name:base_bank_from_iban.model_res_bank
@@ -24,12 +24,12 @@ msgstr ""
 #. module: base_bank_from_iban
 #: model:ir.model,name:base_bank_from_iban.model_res_partner_bank
 msgid "Bank Accounts"
-msgstr ""
+msgstr "Bankkonten"
 
 #. module: base_bank_from_iban
 #: model:ir.model.fields,field_description:base_bank_from_iban.field_res_bank__code
 msgid "Code"
-msgstr ""
+msgstr "Code"
 
 #. module: base_bank_from_iban
 #: model:ir.model,name:base_bank_from_iban.model_account_journal
