--- a/uom_unece/i18n/de.po
+++ b/uom_unece/i18n/de.po
@@ -14,7 +14,7 @@ msgstr ""
 "X-Crowdin-File: /[AmetrasIntelligence.community-data-files] 13.0/uom_unece/i18n/uom_unece.pot\n"
 "X-Crowdin-File-ID: 2916\n"
 "Language: de_DE\n"
-"PO-Revision-Date: 2022-08-06 21:41\n"
+"PO-Revision-Date: 2022-08-11 07:58\n"
 
 #. module: uom_unece
 #: model:ir.model,name:uom_unece.model_uom_uom
@@ -29,5 +29,5 @@ msgstr ""
 #. module: uom_unece
 #: model:ir.model.fields,field_description:uom_unece.field_uom_uom__unece_code
 msgid "UNECE Code"
-msgstr ""
+msgstr "UNECE Code"
 
